[gd_scene load_steps=2 format=3 uid="uid://c2pausemenu01"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
process_mode = 3
script = ExtResource("1_pause")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.6)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 240.0
horizontal_alignment = 1
text = "PAUSED"

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -30.0
offset_right = 80.0
offset_bottom = 30.0

[node name="ResumeButton" type="Button" parent="VBox"]
layout_mode = 2
text = "RESUME"

[node name="QuitButton" type="Button" parent="VBox"]
layout_mode = 2
text = "QUIT TO MENU"

[connection signal="pressed" from="VBox/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBox/QuitButton" to="." method="_on_quit_pressed"]
